<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">9Gags</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="gag">Gag</string>
    <string name="title">Title</string>
    <string name="page">Page</string>
    <string name="number">number</string>
    <string name="loading_page">Loading page</string>

</resources>